# meal-shaker

./: .env.sample  .gitignore  docker-compose.yml
backend/: entrypoint.sh  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: main.py
backend/src/app/api/routes/tabelog/: routes.py
backend/src/app/core/: config.py
backend/src/app/services/tabelog/: service.py
backend/src/app/tests/: test_main.py
docker/backend/: Dockerfile
docker/db/: Dockerfile  pg_hba.conf  postgresql.conf
docker/frontend/: Dockerfile  Dockerfile.local
frontend/: bun.lockb  package.json
frontend/src/app/: _page.tsx  actions.ts  client.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/[area]/result/: page.tsx
frontend/src/app/api/tabelogSearch/: route.ts
frontend/src/app/test/: page.tsx
